feat: add working but yet useless fetch to register page

--- a/views/register.pug
+++ b/views/register.pug
@@ -2,6 +2,7 @@ extends layout
 
 block head 
     link(rel="stylesheet", href="css/register.css")
+    script(src="js/register.js" defer) 
 
     title Register 
 
