--- a/views/register.pug
+++ b/views/register.pug
@@ -19,3 +19,5 @@ block content
             input(type="password", name="password")
 
             input(type="submit", value="Register")
+
+            span(id="responseinfo")
