--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,9 @@ html(lang="en")
 
         link(rel="stylesheet", href="css/main.css")
         link(rel="stylesheet", href="css/header.css")
+        
+        script(src="js/header.js" defer) 
+        
         block head
     body
         include header
