--- a/views/user.pug
+++ b/views/user.pug
@@ -1,8 +1,8 @@
 extends layout 
 
 block head 
-    link(rel="stylesheet", href="/css/register.css")
-    script(src="/js/register.js" defer) 
+    link(rel="stylesheet", href="/css/user.css")
+    script(src="/js/user.js" defer) 
 
     title Register 
 
