feat: change login screen to use spotify oauth

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,12 +9,4 @@ block head
 block content 
     article(class="login-page content")
         form(class="register-form")
-            label(for="username") Username or Email: 
-            input(type="text", name="username")
-
-            label(for="password") Password: 
-            input(type="password", name="password")
-
-            input(type="submit", value="Login")
-
-            span(id="responseinfo")
+            input(type="button", id="spotify-login-button", value="Log into Spotify")
