fix: use session rather than cookies to retrieve logged in user

--- a/views/header.pug
+++ b/views/header.pug
@@ -1,4 +1,6 @@
 header
+    script. 
+        const username = '#{username}'
     div(class="site-header content")
         span(class="site-logo")
             h1
