--- a/views/user.pug
+++ b/views/user.pug
@@ -12,4 +12,5 @@ block content
         div
             h5 Share a song!
             div 
-                input(type="text", placeholder="Enter spotify url")
+                span(class="spotify-url-info")
+                input(type="text", class="spotify-url-input", placeholder="Enter spotify url")
