--- a/client/src/styles/components/User.scss
+++ b/client/src/styles/components/User.scss
@@ -1,10 +1,37 @@
+@import '../variables';
+
 .chat {
     display: grid;
     grid-template-columns: 1fr 2fr;
+
+    padding: 0.5rem;
+}
+
+.chat-input {
+    display: grid;
+    grid-template-columns: auto 10rem;
+    gap: 0.5rem;
+
+    margin-top: 1rem;
+
+    width: 100%;
+
+    & input {
+        font-size: 14pt;
+        font-weight: lighter;
+
+        padding: 0.7rem;
+
+        color: var(--darker-grey);
+    }
 }
 
 .msg {
-    padding: 1em 1em;
+    padding: 1rem 1rem;
 
-    border: 1px solid ;
+    border: 1px solid var(--medium-grey);
+
+    &:not(:last-of-type) {
+        border-bottom: none;
+    }
 }
