--- a/client/src/styles/components/User.scss
+++ b/client/src/styles/components/User.scss
@@ -4,7 +4,18 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
 
+    height: auto;
+
     padding: 0.5rem;
+
+    &>article {
+        display: flex;
+
+        justify-content: center;
+        align-content: flex-end;
+
+        flex-wrap: wrap;
+    }
 }
 
 .chat-input {
@@ -34,4 +45,8 @@
     &:not(:last-of-type) {
         border-bottom: none;
     }
+}
+
+.msg-list {
+    width: 100%;
 }
